# SSVEP1-Master-Thesis

./: LICENSE  README.md
SSVEP-1-BCI/: commMaster_SSVEP1.py  communicationMaster.py  robotVision_SSVEP1.py  robotvision.py
SSVEP-1-BCI/utilities/: detectedObjects.py
SSVEP-1-OpenViBE/scenarios/: ssvep-detector.xml  test.xml
SSVEP-1-OpenViBE/script/: OpenViBE-Classifier-TIME-CCA.py  OpenViBE-Classifier-TIME.py
SSVEP-1-ROS/robotics_function/: CMakeLists.txt  package.xml
SSVEP-1-ROS/robotics_function/include/robotics_function/: main_robotics_function.h  planner.h
SSVEP-1-ROS/robotics_function/src/: main_robotics_function.cpp
SSVEP-1-ROS/ssvep1/: CMakeLists.txt  package.xml
SSVEP-1-ROS/ssvep1/action/: GrabAndRelease.action  Move.action  Release.action
SSVEP-1-ROS/ssvep1/config/: config.yaml
SSVEP-1-ROS/ssvep1/launch/: bringup.launch  simulator.launch  tcp.launch
SSVEP-1-ROS/ssvep1/plotjuggler/: plotLayout.xml
SSVEP-1-ROS/ssvep1/rviz/: rvizConfig.rviz
SSVEP-1-ROS/ssvep1/src/: controller.cpp  interface.cpp  planner.cpp  robot.cpp  tcp_interface.cpp
SSVEP-1-ROS/ssvep1/srv/: sendInitPose.srv  sendInitState.srv
SSVEP-1-ROS/thesis_msgs/: CMakeLists.txt  package.xml
SSVEP-1-ROS/thesis_msgs/msg/: DesiredWaypoint.msg  Error.msg
